src/objects/Unicourt_Case_Lead_JSON__c.object
<CustomObject>
    <fields>
        <fullName>Is_Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JSON_String__c</fullName>
        <label>JSON String</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JSON</fullName>
                </value>
                <value>
                    <fullName>CSV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hadExceptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if any error occurred while processing the records.</description>
        <label>hadExceptions</label>
        <type>Checkbox</type>
    </fields>
    <label>Unicourt Case Lead JSON</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Is_Processed__c</columns>
        <columns>JSON_String__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>JSON-{0000}</displayFormat>
        <label>Unicourt Case Lead JSON Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unicourt Case Lead JSONs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>